--- a/strona_glowna/style_strona_glowna.css
+++ b/strona_glowna/style_strona_glowna.css
@@ -41,3 +41,12 @@
     font-weight: 500;
     margin-left: 25px;
 }
+
+/* Strona główna */
+.home{
+    display: flex;
+    background: url("zdj\zdj-2.jpg") no-repeat center;
+    height: 100vh;
+    background-size: cover;
+    background-attachment: fixed;
+}
