--- a/strona_glowna/style_strona_glowna.css
+++ b/strona_glowna/style_strona_glowna.css
@@ -14,8 +14,8 @@
 .navbar{
     position: fixed;
     width: 100%;
-    padding: 15px 0;
-    background: #349e69;
+    padding: 30px 0;
+    /* background: #349e69; */
     font-family: 'Ubuntu', sans-serif;
 }
 .navbar .max-width{
@@ -28,25 +28,52 @@
     font-size: 35px;
     font-weight: 600;
 }
+.navbar .logo a span{
+    color: #349e69;
+}
 .navbar .menu li{
     list-style: none;
     display: inline-block;
 }
-.navbar .logo span{
-    color: black;
-}
+
 .navbar .menu li a{
     color: white;
     font-size: 18px;
     font-weight: 500;
     margin-left: 25px;
+    transition: color 0.9s ease;
+}
+.navbar .menu li a:hover{
+    color: #349e69;
 }
 
 /* Strona główna */
 .home{
     display: flex;
-    background: url("zdj\zdj-2.jpg") no-repeat center;
+    background: url("zdj-1.jpg") no-repeat center;
     height: 100vh;
+    color: #fff;
+    min-height: 500px;
     background-size: cover;
     background-attachment: fixed;
+    font-family: 'Ubuntu', sans-serif;
+}
+.home .max-width{
+    /* margin: auto 0 auto 40px; */
+}
+.home .home-content .text-1{
+    font-size: 27px;
+}
+.home .home-content .text-2{
+    font-size: 75px;
+    font-weight: 600;
+    margin-left: -3px;
+}
+.home .home-content .text-3{
+    font-size: 40px;
+    margin: 5px 0;
+}
+.home .home-content .text-3 span{
+    color: #349e69;
+    font-weight: 500;
 }
