--- a/strona_glowna/style_strona_glowna.css
+++ b/strona_glowna/style_strona_glowna.css
@@ -98,6 +98,21 @@
     color: #349e69;
     font-weight: 500;
 }
+.home .home-content a{
+    display: inline-block;
+    background: #349e69;
+    color: #fff;
+    font-size: 25px;
+    padding: 12px 36px;
+    margin-top: 20px;
+    border-radius: 6px;
+    border: 2px solid #349e69;
+    transition: all 0.6s ease;
+}
+.home .home-content a:hover{
+    color: #349e69;
+    background: none;
+}
 
 /* Responsywne zapytania start */
 @media (max-width: 1104px){
@@ -148,6 +163,10 @@
     .home .home-content .text-3{
         font-size: 35px;
     }
+    .home .home-content a{
+        font-size: 23px;
+        padding: 10px 30px;
+    }
 }
 
 @media (max-width: 690px) {
@@ -159,6 +178,10 @@
     }
     .home .home-content .text-3{
         font-size: 32px;
+    }
+    .home .home-content a{
+        font-size: 20px;
+        padding: 9px 25px;
     }
 }
 
