--- a/strona_glowna/style_strona_glowna.css
+++ b/strona_glowna/style_strona_glowna.css
@@ -9,6 +9,58 @@
     padding: 0 80px;
     margin: auto;
 }
+/* ------------------------------------------------------------------- */
+/* Wspólny CSS dla podstron */
+section{
+    padding: 100px 0;
+}
+.max-width{
+    max-width: 1300px;
+    padding: 0 80px;
+    margin: auto;
+}
+.about, .services, .skills, .teams, .contact, footer{
+    font-family: 'Poppins', sans-serif;
+}
+.about .about-content,
+.services .services-content,
+.skills .skills-content,
+.contact .contact-content{
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: space-between;
+}
+section .title{
+    position: relative;
+    text-align: center;
+    font-size: 40px;
+    font-weight: 500;
+    margin-bottom: 60px;
+    padding-bottom: 20px;
+    font-family: 'Ubuntu', sans-serif;
+}
+section .title::before{
+    content: "";
+    position: absolute;
+    bottom: 0px;
+    left: 50%;
+    width: 180px;
+    height: 3px;
+    background: #111;
+    transform: translateX(-50%);
+}
+section .title::after{
+    position: absolute;
+    bottom: -8px;
+    left: 50%;
+    font-size: 20px;
+    color: #349e69;
+    padding: 0 5px;
+    background: #fff;
+    transform: translateX(-50%);
+}
+/* ------------------------------------------------------------------- */
 /* Menu */
 .navbar{
     position: fixed;
@@ -127,40 +179,14 @@
 section{
     padding: 100px 0;
 }
-.about{
+.about, .services{
     font-family: 'Poppins', sans-serif;
 }
-.about .title{
-    position: relative;
-    text-align: center;
-    font-size: 40px;
-    font-weight: 500;
-    margin-bottom: 60px;
-    padding-bottom: 20px;
-    font-family: 'Ubuntu', sans-serif;
-}
-.about .title::before{
-    content: "";
-    position: absolute;
-    bottom: 0px;
-    left: 50%;
-    width: 180px;
-    height: 3px;
-    background: #111;
-    transform: translateX(-50%);
-}
-.about .title::after{
+.about .title:after{
     content: "Kim jestem";
-    position: absolute;
-    bottom: -7px;
-    left: 50%;
-    font-size: 20px;
-    color: #349e69;
-    padding: 5px;
-    background: #fff;
-    transform: translateX(-50%);
 }
-.about .about-content{
+.about .about-content,
+.service .service-content{
     display: flex;
     flex-wrap: wrap;
     align-items: center;
@@ -206,6 +232,51 @@ section{
     background: none;
 }
 
+/* ------------------------------------------------------------------- */
+/* Usługi */
+.services{
+    color: #fff;
+    background: #111;
+}
+.services .title::before{
+    background: #fff;   
+}
+.services .title:after{
+    background: #111;
+    content:"Co oferuję";
+}
+.services .services-content .card{
+    width: calc(33% - 20px);
+    background: #222;
+    text-align: center;
+    border-radius: 6px;
+    padding: 50px 25px;
+    cursor: pointer;
+    transition: all 0.6s ease;
+}
+.services .services-content .card:hover{
+    background: #349e69;
+}
+.services .services-content .card .box{
+    transition: all 0.6s ease;
+}
+.services .services-content .card:hover .box{
+    transform: scale(1.10);
+}
+.services .services-content .card i{
+    font-size: 50px;
+    color: #349e69;
+    transition: color 0.6s ease;
+}
+.services .services-content .card:hover i{
+    color: #fff;
+}
+.services .services-content .card .text{
+    font-size: 25px;
+    font-weight: 500;
+    margin: 10px 0 7px 0;
+
+}
 
 /* ------------------------------------------------------------------- */
 /* Responsywne zapytania start */
@@ -269,7 +340,7 @@ section{
         padding: 10px 30px;
     }
     .max-width{
-        max-width: 800px;
+        max-width: 930px;
     }
     .about .about-content .column{
         width: 100%;
@@ -282,7 +353,10 @@ section{
     .about .about-content .right{
         flex: 100%;
     }
-
+    .services .services-content .card{
+        width: calc(50% - 10px);
+        margin-bottom: 20px;
+    }
 }
 
 @media (max-width: 690px) {
@@ -297,7 +371,9 @@ section{
     }
     .home .home-content a{
         font-size: 20px;
-        /* padding: 9px 25px; */
+    }
+    .services .services-content .card{
+        width: 100%;
     }
 }
 
