--- a/strona_glowna/style_strona_glowna.css
+++ b/strona_glowna/style_strona_glowna.css
@@ -14,6 +14,17 @@
 section{
     padding: 100px 0;
 }
+.about, .services, .skills{
+    font-family: 'Poppins', sans-serif;
+}
+.about .about-content,
+.service .service-content,
+.skills .skills-content{
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: space-between;
+}
 .max-width{
     max-width: 1300px;
     padding: 0 80px;
@@ -175,22 +186,9 @@ section .title::after{
 
 
 /* ------------------------------------------------------------------- */
-/* O mnie  */
-section{
-    padding: 100px 0;
-}
-.about, .services{
-    font-family: 'Poppins', sans-serif;
-}
-.about .title:after{
+/* O mnie */
+.about .title::after{
     content: "Kim jestem";
-}
-.about .about-content,
-.service .service-content{
-    display: flex;
-    flex-wrap: wrap;
-    align-items: center;
-    justify-content: space-between;
 }
 .about .about-content .left{
     width: 45%;
@@ -241,7 +239,7 @@ section{
 .services .title::before{
     background: #fff;   
 }
-.services .title:after{
+.services .title::after{
     background: #111;
     content:"Co oferuję";
 }
@@ -277,6 +275,82 @@ section{
     margin: 10px 0 7px 0;
 
 }
+
+/* ------------------------------------------------------------------- */
+/* Umiejętnośći */
+.skills .title::after{
+    content: "Co potrafię";
+}
+.skills .skills-content .column{
+    width: calc(50% - 30px)
+}
+.skills .skills-content .left .text{
+    font-size: 25px;
+    font-weight: 600;
+    margin-bottom: 10px;
+}
+.skills .skills-content .left p{
+    text-align: justify;
+}
+.skills .skills-content .left a{
+    display: inline-block;
+    background: #349e69;
+    color: #fff;
+    font-size: 18px;
+    font-weight: 500;
+    padding: 8px 16px;
+    margin-top: 20px;
+    border-radius: 6px;
+    border: 2px solid #349e69;
+    transition: all 0.6s ease;
+}
+.skills .skills-content .left a:hover{
+    color: #349e69;
+    background: none;
+}
+.skills .skills-content .left .bars{
+    margin-bottom: 15px;
+}
+.skills .skills-content .right .info{
+    display: flex;
+    margin-bottom: 5px;
+    align-items: center;
+    justify-content: space-between;
+}
+.skills .skills-content .right span{
+    font-weight: 500;
+    font-size: 18px;
+}
+.skills .skills-content .right .line{
+    height: 5px;
+    width: 100%;
+    background: lightgray;
+    position: relative;
+}
+.skills .skills-content .right .line::before{
+    content: "";
+    position: absolute;
+    height: 100%;
+    left: 0;
+    top: 0;
+    background: #349e69;
+}
+.skills-content .right .first::before{
+    width: 90%;
+}
+.skills-content .right .second::before{
+    width: 65%;
+}
+.skills-content .right .thirth::before{
+    width: 80%;
+}
+.skills-content .right .fourth::before{
+    width: 70%;
+}
+.skills-content .right .fifth::before{
+    width: 95%;
+}
+
 
 /* ------------------------------------------------------------------- */
 /* Responsywne zapytania start */
@@ -357,6 +431,10 @@ section{
         width: calc(50% - 10px);
         margin-bottom: 20px;
     }
+    .skills .skills-content .column{
+        width: 100%;
+        margin-bottom: 40px;
+    }
 }
 
 @media (max-width: 690px) {
@@ -372,7 +450,8 @@ section{
     .home .home-content a{
         font-size: 20px;
     }
-    .services .services-content .card{
+    .services .services-content .card,
+    .skills .skills-content .column{
         width: 100%;
     }
 }
