--- a/strona_glowna/style_strona_glowna.css
+++ b/strona_glowna/style_strona_glowna.css
@@ -14,7 +14,7 @@
 section{
     padding: 100px 0;
 }
-.about, .services, .skills{
+.about, .services, .skills, .examples{
     font-family: 'Poppins', sans-serif;
 }
 .about .about-content,
@@ -30,7 +30,7 @@ section{
     padding: 0 80px;
     margin: auto;
 }
-.about, .services, .skills, .teams, .contact, footer{
+.about, .services, .skills, .examples, .contact, footer{
     font-family: 'Poppins', sans-serif;
 }
 .about .about-content,
@@ -232,14 +232,16 @@ section .title::after{
 
 /* ------------------------------------------------------------------- */
 /* Usługi */
-.services{
+.services, .examples{
     color: #fff;
     background: #111;
 }
-.services .title::before{
+.services .title::before,
+.examples .title::before{
     background: #fff;   
 }
-.services .title::after{
+.services .title::after,
+.examples .title::after{
     background: #111;
     content:"Co oferuję";
 }
@@ -349,6 +351,24 @@ section .title::after{
 }
 .skills-content .right .fifth::before{
     width: 95%;
+}
+
+/* ------------------------------------------------------------------- */
+/* Przykładowe zdjęcia */
+.examples .title::after{
+    content: "Co uwieczniłam";
+}
+.examples .carousel .card{
+    background: #222;
+    border-radius: 6px;
+    padding: 25px 35px;
+}
+.examples .carousel .card img{
+    height: 300px;
+    width: 300px;
+    object-fit: cover;
+    border-radius: 5%;
+    border: 3px solid #349e69;
 }
 
 
