--- a/strona_glowna/style_strona_glowna.css
+++ b/strona_glowna/style_strona_glowna.css
@@ -27,9 +27,10 @@ section{
 }
 .max-width{
     max-width: 1300px;
-    padding: 0 80px;
+    padding: 0 70px;
     margin: auto;
 }
+
 .about, .services, .skills, .examples, .contact, footer{
     font-family: 'Poppins', sans-serif;
 }
@@ -358,6 +359,18 @@ section .title::after{
 .examples .title::after{
     content: "Co uwieczniłam";
 }
+
+.examples .hand{
+    text-align: center;
+    margin-top: -45px;
+}
+
+.hand img{
+    text-align: center;
+    height: 70px;
+    width: 130px;
+}
+
 .examples .carousel .card{
     border-radius: 6px;
     padding: 18px 25px;
