--- a/strona_glowna/style_strona_glowna.css
+++ b/strona_glowna/style_strona_glowna.css
@@ -14,12 +14,13 @@
 section{
     padding: 100px 0;
 }
-.about, .services, .skills, .examples{
+.about, .services, .skills, .examples, .contact{
     font-family: 'Poppins', sans-serif;
 }
 .about .about-content,
 .service .service-content,
-.skills .skills-content{
+.skills .skills-content,
+.contact .contact-content{
     display: flex;
     flex-wrap: wrap;
     align-items: center;
@@ -429,6 +430,106 @@ section .title::after{
 }
 
 /* ------------------------------------------------------------------- */
+/* Kontakt */
+
+.contact .title::after{
+    content: "W kontakcie";
+}
+
+.contact .contact-content .column{
+    width: calc(50% - 30px);
+}
+
+.contact .contact-content .text{
+    font-size: 23px;
+    font-weight: 600;
+    margin-bottom: 12px;
+}
+
+.contact .contact-content .left p{
+    text-align: justify;
+}
+
+.contact .contact-content .left .icons{
+    margin: 10px 0;
+}
+
+.contact .contact-content .row{
+    display: flex;
+    height: 65px;
+    align-items: center;
+}
+
+.contact .contact-content .row .info{
+    margin-left: 30px;
+}
+
+.contact .contact-content .row i{
+    font-size: 25px;
+    color: #349e69;
+}
+
+.contact .contact-content .info .head{
+    font-weight: 500;
+}
+
+.contact .contact-content .info .sub-title{
+    color: #333;
+}
+
+.contact .right form .field,
+.contact .right form .fields .field{
+    height: 45px;
+    width: 100%;
+    margin-bottom: 10px;
+}
+
+.contact .right form .textarea{
+    height: 80px;
+    width: 100%;
+}
+
+.contact .right form .field input,
+.contact .right form .textarea textarea{
+    height: 100%;
+    width: 100%;
+    border: 1px solid lightgray;
+    border-radius: 5px;
+    outline: none;
+    padding: 0 15px;
+    font-size: 17px;
+    font-family: 'Poppins', sans-serif;
+}
+
+.contact .right form .textarea textarea{
+    resize: none;
+}
+
+.contact .right form .button{
+    height: 45px;
+    width: 100%;
+}
+
+.contact .right form .button button{
+    height: 100%;
+    width: 100%;
+    border: 2px solid #349e69;
+    background: #349e69;
+    color: #fff;
+    font-size: 22px;
+    font-weight: 500;
+    border-radius: 5px;
+    transition: all 0.5s ease;
+    cursor: pointer;
+    
+}
+
+.contact .right form .button button:hover{
+    color: #349e69;
+    background: none;
+}
+
+/* ------------------------------------------------------------------- */
 /* Responsywne zapytania start */
 @media (max-width: 1300px){
     .home .max-width{
@@ -507,7 +608,8 @@ section .title::after{
         width: calc(50% - 10px);
         margin-bottom: 20px;
     }
-    .skills .skills-content .column{
+    .skills .skills-content .column,
+    .contact .contact-content .column{
         width: 100%;
         margin-bottom: 40px;
     }
