--- a/strona_glowna/style_strona_glowna.css
+++ b/strona_glowna/style_strona_glowna.css
@@ -501,7 +501,13 @@ section .title::after{
     font-family: 'Poppins', sans-serif;
 }
 
+.contact .right form .field input:focus,
+.contact .right form .textarea textarea:focus{
+    border-color: #333;
+}
+
 .contact .right form .textarea textarea{
+    padding-top: 10px;
     resize: none;
 }
 
@@ -510,12 +516,14 @@ section .title::after{
     width: 100%;
 }
 
-.contact .right form .button button{
+.right form .button button{
     height: 100%;
     width: 100%;
     border: 2px solid #349e69;
     background: #349e69;
     color: #fff;
+    flex-wrap: nowrap;
+    outline: none;
     font-size: 22px;
     font-weight: 500;
     border-radius: 5px;
@@ -524,7 +532,7 @@ section .title::after{
     
 }
 
-.contact .right form .button button:hover{
+.right form .button button:hover{
     color: #349e69;
     background: none;
 }
@@ -640,5 +648,27 @@ section .title::after{
     }
     .home .home-content .text-3{
         font-size: 27px;
+    }
+    .about .about-content .right .text,
+    .skills .skills-content .left .text{
+        font-size: 19px;
+    }
+    .contact .right form .fields{
+        flex-direction: column;
+    }
+    .contact .right form .name,
+    .contact .right form .email{
+        margin: 0;
+    }
+    .right form .error-box{
+       width: 150px;
+    }
+    .scroll-up-btn{
+        right: 15px;
+        bottom: 15px;
+        height: 38px;
+        width: 35px;
+        font-size: 23px;
+        line-height: 38px;
     }
 }
