--- a/strona_glowna/style_strona_glowna.css
+++ b/strona_glowna/style_strona_glowna.css
@@ -13,7 +13,6 @@ html{
     margin: auto;
 }
 
-
 /* ------------------------------------------------------------------- */
 /* Wspólny CSS dla podstron */
 section{
@@ -82,7 +81,6 @@ section .title::after{
     width: 100%;
     z-index: 999;
     padding: 30px 0;
-    /* background: #349e69; */
     font-family: 'Ubuntu', sans-serif;
     transition: all 0.9s ease;
 }
@@ -96,7 +94,7 @@ section .title::after{
     justify-content: space-between;
 }
 .navbar .logo a{
-    color: white;
+    color: #fff;
     font-size: 35px;
     font-weight: 600;
 }
@@ -124,8 +122,7 @@ section .title::after{
     color: #349e69;
 }
 .navbar.sticky .menu li a:hover{
-    /* padding: 15px 0; */
-    background: #349e69;
+    color: #fff;
 }
 
 /* ------------------------------------------------------------------- */
