Dodanie php i js do opcji wysyłania wiadomośc

--- a/strona_glowna/style_strona_glowna.css
+++ b/strona_glowna/style_strona_glowna.css
@@ -614,6 +614,12 @@ form .textarea i{
     background: none;
 }
 
+.button span{
+    color: #349e69;
+    margin-left: 30px;
+    display: none;
+} 
+
 /* ------------------------------------------------------------------- */
 /* Stopka */
 footer{
