--- a/strona_glowna/uploader/style_uploader.css
+++ b/strona_glowna/uploader/style_uploader.css
@@ -5,3 +5,117 @@
     box-sizing: border-box;
     font-family: "Ubuntu", sans-serif;
 }
+
+body{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    min-height: 110vh;
+    background: #349e69;
+}
+
+.wrapper{
+    width: 450px;
+    padding: 30px;
+    background: white;
+    border-radius: 6px;
+}
+
+.wrapper header{
+    color: #349e69;
+    font-size: 30px;
+    font-weight: 600;
+    text-align: center;
+}
+
+.wrapper form{
+    height: 170px;
+    display: flex;
+    margin: 32px 0;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    border-radius: 6px;
+    border: 3px dotted #349e69;
+}
+
+form :where(i, p){
+    color: #349e69;
+}
+
+form i{
+    font-size: 55px;
+}
+
+form p{
+    font-size: 17px;
+    margin-top: 18px;
+}
+
+section .row{
+    background: lightgreen;
+    margin-bottom: 15px;
+    list-style: none;
+    padding: 18px 22px;
+    border-radius: 6px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+section .row i{
+    font-size: 30px;
+    color: #349e69;
+}
+
+section .details span{
+    font-size: 15px;
+}
+
+.progress-area .row .content{
+    width: 100%;
+    margin-left: 16px;
+}
+
+.progress-area .details{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    margin-bottom: 8px;
+}
+
+.progress-area .progress-bar{
+    height: 7px;
+    width: 100%;
+    margin-bottom: 5px;
+    background: white;
+    border-radius: 35px;
+}
+
+.progress-bar .progress{
+    height: 100%;
+    width: 0%;
+    background: #349e69;
+    border-radius: inherit;
+}
+
+.uploaded-area .row .content{
+    display: flex;
+    align-items: center;
+}
+
+.uploaded-area .row .details{
+    display: flex;
+    margin-left: 16px;
+    flex-direction: column;
+}
+
+.uploaded-area .details .size{
+    font-size: 12px;
+    color: darkgreen;
+}
+
+.uploaded-area .fa-check{
+    color: darkgreen;
+    font-size: 20px;
+}
