--- a/strona_glowna/uploader/style_uploader.css
+++ b/strona_glowna/uploader/style_uploader.css
@@ -37,6 +37,7 @@ body{
     flex-direction: column;
     border-radius: 6px;
     border: 3px dotted #349e69;
+    cursor: pointer;
 }
 
 form :where(i, p){
@@ -97,6 +98,15 @@ section .details span{
     width: 0%;
     background: #349e69;
     border-radius: inherit;
+}
+
+.uploaded-area{
+    max-height: 230px;
+    overflow-y: scroll;
+}
+
+.uploaded-area::-webkit-scrollbar{
+    width: 0px;
 }
 
 .uploaded-area .row .content{
