--- a/strona_glowna/style.css
+++ b/strona_glowna/style.css
@@ -588,6 +588,38 @@ form .textarea i{
     font-size: 20px;
 }
 
+.explanation{
+    font-size: 15px;
+    margin-bottom: 15px;
+}
+
+/* Tooltip container */
+.tooltip {
+    position: relative;
+    display: inline-block;
+}
+  
+  /* Tooltip text */
+.tooltip .tooltiptext {
+    visibility: hidden;
+    width: 300px;
+    background-color: lightgray;
+    color: black;
+    text-align: center;
+    padding: 5px;
+    border-radius: 6px;
+    border: 2px solid black;
+   
+    /* Position the tooltip text - see examples below! */
+    position: absolute;
+    z-index: 1;
+}
+  
+  /* Show the tooltip text when you mouse over the tooltip container */
+.tooltip:hover .tooltiptext {
+    visibility: visible;
+}
+
 .contact .right form .button-area{
     height: 45px;
     width: 100%;
