--- a/sesje/style.css
+++ b/sesje/style.css
@@ -167,7 +167,7 @@ section .title::after{
 /* Strona główna */
 .home{
     display: flex;
-    background: url("background.jpg") no-repeat center;
+    background: url("rekwizyty/background.jpg") no-repeat center;
     height: 100vh;
     color: #fff;
     min-height: 500px;
@@ -395,6 +395,12 @@ section .title::after{
 }
 .skills-content .right .fifth::before{
     width: 95%;
+}
+
+.skills-content .skills-what{
+    margin: 200px 10px 20px 100px;
+    font-size: 3em;
+    list-style-image: url(rekwizyty/CoMogeZrobic1.png);
 }
 
 /* ------------------------------------------------------------------- */
