--- a/sesje/style.css
+++ b/sesje/style.css
@@ -398,11 +398,30 @@ section .title::after{
 }
 
 .skills-content .skills-what{
-    margin: 200px 10px 20px 100px;
-    font-size: 3em;
-    list-style-image: url(rekwizyty/CoMogeZrobic1.png);
+    margin: 100px 10px 300px 300px;
+    font-size: 2em;
 }
 
+.skills-content .skills-what #what1{
+    list-style-image: url(rekwizyty/CoMogeZrobic1.png);
+    /* display: inline-block; */
+    
+    /* background-position:left;
+    padding-left: 25px; */
+}
+
+.skills-content .skills-what #what2{
+    list-style-image: url(rekwizyty/CoMogeZrobic2.png);
+}
+.skills-content .skills-what #what3{
+    list-style-image: url(rekwizyty/CoMogeZrobic3.png);
+}
+.skills-content .skills-what #what4{
+    list-style-image: url(rekwizyty/CoMogeZrobic4.png);
+}
+.skills-content .skills-what #what5{
+    list-style-image: url(rekwizyty/CoMogeZrobic5.png);
+}
 /* ------------------------------------------------------------------- */
 /* Przykładowe zdjęcia */
 .examples .title::after{
