--- a/sesje/style_galeria.css
+++ b/sesje/style_galeria.css
@@ -16,7 +16,7 @@ html{
     padding: 0 80px;
     margin: auto;
 }
-/* Menu */
+ /*Menu */
 .navbar{
     position: flex;
     width: 100%;
@@ -33,6 +33,7 @@ html{
     display: flex;
     align-items: center;
     justify-content: space-between;
+    margin-right: 15%;
 }
 .navbar .logo a{
     color: black;
@@ -66,7 +67,7 @@ html{
     color: #fff;
 }
 
-/* Menu btn */
+ /*Menu btn */
 .menu-btn{
     color: black;
     font-size: 23px;
@@ -131,6 +132,7 @@ body{
 .gallery .image span{
     display: flex;
     width: 100%;
+    height: 375px;
     overflow: hidden;
     border-radius: 4px;
 }
@@ -253,7 +255,7 @@ body{
     }
 }
 
-/* Responsywne zapytania start */
+ /*Responsywne zapytania start */
 @media (max-width: 947px){
     .menu-btn{
         display: block;
