--- a/sesje/zarzadzanie/style_zarzadzanie.css
+++ b/sesje/zarzadzanie/style_zarzadzanie.css
@@ -1,17 +1,120 @@
-*{
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600;700&display=swap');
+
+* {
     margin: 0;
     padding: 0;
-    box-sizing: border-box;
-    text-decoration: none;
+    box-sizing: 0;
+    font-family: Poppins, sans-serif;
 }
-html{
-    scroll-behavior: smooth;
-}
+
 body {
     display: flex;
+    justify-content: center;
     align-items: center;
     flex-direction: column;
     font-family: 'Roboto', sans-serif;
+    min-height: 100vh;
+    background: rgb(6,4,55);
+    background: linear-gradient(90deg, rgba(6,4,55,1) 0%, rgba(66,131,48,1) 40%, rgba(12,101,135,1) 100%);
+}
+
+html{
+    scroll-behavior: smooth;
+}
+
+
+.wrapper {
+    margin: 50px 0px 50px;
+    width: 500px;
+    background: transparent;
+    border: 2px solid rgba(255, 255, 255, .3);
+    backdrop-filter: invert(15%);
+    box-shadow: 0 0 10px rgba(0, 0, 0, .3);
+    color: white;
+    border-radius: 12px;
+    padding: 30px 45px;
+}
+
+h1, h4{
+    font-size: 40px;
+    text-align: center;
+    color: white;
+}
+
+h2 {
+    font-size: 25px;
+    text-align: center;
+    color: white;
+}
+
+h5 {
+    font-size: 18px;
+    font-weight: normal;
+    text-align: center;
+    color: white;
+}
+
+.wrapper .logout {
+    font-size: 17px;
+    text-align: center;
+    margin-top: 25px;
+    margin: 40px 0 60px;
+}
+
+.logout a {
+    color: white;
+    text-decoration: none;
+    font-weight: 600;
+    width: 100%;
+    height: 45px;
+    background: white;
+    border: none;
+    outline: none;
+    border-radius: 14px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, .3);
+    cursor: pointer;
+    font-size: 19px;
+    color: black;
+    font-weight: 600;
+    padding: 10px;
+}
+
+.logout a:hiver{
+    text-decoration: underline;
+}
+
+.wrapper .input-box{
+    position: relative;
+    width: 50%;
+    height: 55px;
+    margin: 5px 0px 5px 0px;
+    left: 25%;
+}
+
+.wrapper input[type="file"]::file-selector-button {
+    margin: 9px;
+    border: 2px solid;
+    padding: 0.2em 0.4em;
+    border-radius: 22px;
+    background-color: white;
+}
+
+.input-box input::placeholder {
+    color: white;
+}
+
+.wrapper button {
+    width: 100%;
+    height: 45px;
+    background: white;
+    border: none;
+    outline: none;
+    border-radius: 14px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, .3);
+    cursor: pointer;
+    font-size: 19px;
+    color: black;
+    font-weight: 600;
 }
 
 .gallery{
@@ -49,3 +152,18 @@ body {
 button {
     text-align: center;
 }
+
+
+/**/
+
+
+
+
+
+
+
+
+
+
+
+
